--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/promise-polyfill@8/dist/polyfill.min.js"></script>
   <script src="scripts/fetch.js"></script>
-  <script src="scripts/swapi-wrapper.umd.min.js"></script>
+  <script src="scripts/starwarsapi-wrapper.umd.min.js"></script>
   <script>
     var app = new Vue({
       el: '#app',
